# mitosisanalyzer-napari

./: .pre-commit-config.yaml  Apptainer  README.md  mitosisanalyzer-napari-0.0.1.def  pyproject.toml  setup.cfg
.github/workflows/: apptainer_deploy
apptainer/: mitosisanalyzer-napari-0.0.1.def
mitoanalyzer_napari.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
mitosisanalyzer_napari/: __init__.py  _widget.py  napari.yaml  track_widget.py
mitosisanalyzer_napari.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/_tests/: test_widget.py
src/mitosisanalyzer_napari/: __init__.py  _widget.py  napari.yaml  pyqt_test.py
