[metadata]
name = mitosisanalyzer-napari
version = 0.0.1
classifiers = 
    Framework :: napari

[options]
packages = find:
include_package_data = True
install_requires = 
    mitosisanalyzer
    napari
    napari-aicsimageio
    napari-layer-table
    napari-matplotlib

[options.entry_points]
napari.manifest =
    mitosisanalyzer-napari = mitosisanalyzer_napari:napari.yaml
